[#1029] Fix drawer on mobile view

--- a/frontend/src/modules/knowledge-library/header.scss
+++ b/frontend/src/modules/knowledge-library/header.scss
@@ -106,6 +106,9 @@
 
     @-moz-document url-prefix() {
       max-width: 427px;
+      @media (min-width: 471px) and (max-width: 735px) {
+        max-width: 350px;
+      }
     }
 
     .ant-space-item:nth-of-type(1) {
@@ -144,6 +147,9 @@
           color: #fff;
         }
       }
+    }
+    @media (min-width: 471px) and (max-width: 735px) {
+      max-width: 400px;
     }
   }
 
@@ -245,7 +251,7 @@
         display: none;
       }
     }
-    @media (max-width: 400px) {
+    @media (max-width: 500px) {
       .select-button {
         border-radius: 4px 0px 0px 4px !important;
         background-color: #6da0ac !important;
@@ -274,7 +280,6 @@
     }
   }
   @media (max-width: 400px) {
-    padding: 5px 16px 5px 16px !important;
     .mobile-src {
       display: block;
       max-width: fit-content;
@@ -283,5 +288,9 @@
     .desktop-src {
       display: none;
     }
+  }
+
+  @media (min-width: 400px) and (max-width: 735px) {
+    padding: 5px 16px 5px 16px !important;
   }
 }
